--- a/style/style.css
+++ b/style/style.css
@@ -2,10 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background: black;
 }
 
 .wrapper {
   width: 100vw;
   height: 100vh;
-  background: url(../img/hero.jpg) 100% no-repeat;
+  background: url(../img/hero2.jpg) center / contain no-repeat;
 }
