--- a/style/style.css
+++ b/style/style.css
@@ -8,5 +8,5 @@
 .wrapper {
   width: 100vw;
   height: 100vh;
-  background: url(../img/hero2.jpg) center / contain no-repeat;
+  background: url(../img/bghero.jpg) center / contain no-repeat;
 }
