change styles & add relative

--- a/style/style.css
+++ b/style/style.css
@@ -14,12 +14,12 @@
 .btn {
   background: transparent;
   height: 200px;
-  border: 5px solid #fff;
   border-radius: 10px;
   cursor: pointer;
-  transition: border .5s ease;
+  transition: background .5s ease;
+  position: relative;
 }
 
 .btn:hover {
-  border: 5px solid #ccc;
+  background: #000;
 }
