--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,7 @@
   width: 100vw;
   height: 100vh;
   background: url(../img/bghero.jpg) center / contain no-repeat;
+  position: relative;
 }
 
 .btn {
@@ -17,7 +18,11 @@
   border-radius: 10px;
   cursor: pointer;
   transition: background .5s ease;
-  position: relative;
+  position: absolute;
+}
+
+.btn2 {
+  right: 0;
 }
 
 .btn:hover {
